help blet because i am losing my mind

--- a/src/main/webapp/admin/categoryManagement.xhtml
+++ b/src/main/webapp/admin/categoryManagement.xhtml
@@ -14,6 +14,7 @@
         <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
         <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
         <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
+        <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
     </p:menubar>
 
 
@@ -60,7 +61,7 @@
         </p:dataTable>
     </h:form>
 
-    <!-- Dialog Form -->
+
     <h:form id="dialogs">
         <p:dialog header="Category Details" widgetVar="categoryDialog" modal="true" resizable="false"
                   id="categoryDialog" draggable="false" showEffect="fade" hideEffect="fade" closable="true"
