--- a/src/main/webapp/admin/productManagement.xhtml
+++ b/src/main/webapp/admin/productManagement.xhtml
@@ -10,8 +10,9 @@
 
     <p:menubar>
         <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
-            <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
+        <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
         <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
+        <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
     </p:menubar>
 
     <h:outputText value="Products"
