--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -73,14 +73,17 @@
    <p:dialog header="Confirm Order" widgetVar="confirmDialog" modal="true" showEffect="fade" hideEffect="fade">
       <h:form id="confirmForm">
          <p:outputPanel id="confirmContent" style="text-align: center;">
-            <p class="m-0">Are you sure you want to add #{showProductBean.selectedProduct.name} to your cart?</p>
+            <p class="m-0">How many #{showProductBean.selectedProduct.name} would you like to add to your cart?</p>
             <div class="mt-3">
-                <p:commandButton value="Yes" 
-                               actionListener="#{orderBean.addItemToOrder(showProductBean.selectedProduct)}"
-                               oncomplete="PF('confirmDialog').hide()"
+                <p:spinner id="quantity" value="#{showProductBean.quantity}" min="1" max="99" />
+            </div>
+            <div class="mt-3">
+                <p:commandButton value="Add to Cart" 
+                               actionListener="#{orderBean.addItemToOrder(showProductBean.selectedProduct, showProductBean.quantity)}"
+                               oncomplete="PF('confirmDialog').hide(); #{showProductBean.resetQuantity()}"
                                update=":pageGrowl :sidebarMenuForm:orderItemCountOutputPanel"
                                styleClass="ui-button-success mr-2"/>
-                <p:commandButton value="No" 
+                <p:commandButton value="Cancel" 
                                onclick="PF('confirmDialog').hide()" 
                                type="button"
                                styleClass="ui-button-secondary"/>
