--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -71,29 +71,36 @@
       </h:form>
    </p:sidebar>
 
-   <p:dialog header="Confirm Order" widgetVar="confirmDialog" modal="true" showEffect="fade" hideEffect="fade" width="500">
+   <p:dialog header="Confirm Order" widgetVar="confirmDialog" modal="true" showEffect="fade" hideEffect="fade" width="500" position="center" resizable="false" draggable="false" closable="true" minHeight="200">
       <h:form id="confirmForm">
-         <p:outputPanel id="confirmContent" style="text-align: center;">
+         <p:outputPanel id="confirmContent" style="text-align: center; max-height: 400px; overflow-y: auto;">
             <p class="m-0">How many #{showProductBean.selectedProduct.name} would you like to add to your cart?</p>
             <div class="mt-3">
                 <p:spinner id="quantity" value="#{showProductBean.quantity}" min="1" max="99" />
             </div>
 
             <p:panel header="Available Add-ons" toggleable="true" collapsed="false" styleClass="mt-3" rendered="#{not empty showProductBean.availableAddonTypes}">
-                <p:accordionPanel dynamic="true" multiple="true" var="addonType" value="#{showProductBean.availableAddonTypes}">
-                    <p:tab title="#{addonType.name}">
-                        <p:dataList value="#{showProductBean.getAvailableAddonsForType(addonType.id)}" var="addon" type="unordered">
-                            <p:selectBooleanCheckbox id="addonCheckbox_#{addon.id}" itemLabel="#{addon.name} (+$#{addon.price})">
-                                <p:ajax listener="#{showProductBean.toggleAddon(addon)}" update="@this" />
-                            </p:selectBooleanCheckbox>
-                        </p:dataList>
-                    </p:tab>
-                </p:accordionPanel>
+                <ui:repeat value="#{showProductBean.availableAddonTypes}" var="addonType">
+                    <div class="addon-type-section mt-2">
+                        <h3 class="addon-type-name">#{addonType.name}</h3>
+                        <p:panelGrid columns="4" styleClass="ui-noborder" style="width:100%">
+                            <p:selectOneRadio id="addonRadio_#{addonType.id}" value="#{showProductBean.selectedAddonsByType[addonType.id]}" layout="grid" columns="2">
+                                <f:selectItems value="#{showProductBean.getAvailableAddonsForType(addonType.id)}" 
+                                              var="addon" 
+                                              itemLabel="#{addon.name} (+$#{addon.price})" 
+                                              itemValue="#{addon.id}" />
+                                <p:ajax listener="#{showProductBean.selectAddonForType(addonType.id)}" update="@this" />
+                            </p:selectOneRadio>
+                        </p:panelGrid>
+                        <p:separator />
+                    </div>
+                </ui:repeat>
             </p:panel>
 
             <div class="mt-3">
                 <p:commandButton value="Add to Cart" 
-                               actionListener="#{orderBean.addItemToOrder(showProductBean.selectedProduct, showProductBean.quantity, showProductBean.selectedAddons)}"
+                               actionListener="#{showProductBean.updateSelectedAddonsList()}"
+                               action="#{orderBean.addItemToOrder(showProductBean.selectedProduct, showProductBean.quantity, showProductBean.selectedAddons)}"
                                oncomplete="PF('confirmDialog').hide(); #{showProductBean.resetQuantity()}"
                                update=":pageGrowl :sidebarMenuForm:orderItemCountOutputPanel"
                                styleClass="ui-button-success mr-2"/>
