--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -75,8 +75,22 @@
       <h:form id="confirmForm">
          <p:outputPanel id="confirmContent" style="text-align: center; max-height: 400px; overflow-y: auto;">
             <p class="m-0">How many #{showProductBean.selectedProduct.name} would you like to add to your cart?</p>
+
             <div class="mt-3">
-                <p:spinner id="quantity" value="#{showProductBean.quantity}" min="1" max="99" />
+                <p:outputPanel id="pricePanel">
+                    <div style="margin-bottom: 10px; font-weight: bold;">
+                        <h:outputText value="Base Price: " />
+                        <h:outputText value="#{showProductBean.selectedProduct.price}">
+                            <f:convertNumber type="currency" currencySymbol="$"/>
+                        </h:outputText>
+                    </div>
+                </p:outputPanel>
+            </div>
+
+            <div class="mt-3">
+                <p:spinner id="quantity" value="#{showProductBean.quantity}" min="1" max="99">
+                    <p:ajax update="totalPricePanel" process="@this" />
+                </p:spinner>
             </div>
 
             <p:panel header="Available Add-ons" toggleable="true" collapsed="false" styleClass="mt-3" rendered="#{not empty showProductBean.availableAddonTypes}">
@@ -84,18 +98,39 @@
                     <div class="addon-type-section mt-2">
                         <h3 class="addon-type-name">#{addonType.name}</h3>
                         <p:panelGrid columns="4" styleClass="ui-noborder" style="width:100%">
-                            <p:selectOneRadio id="addonRadio_#{addonType.id}" value="#{showProductBean.selectedAddonsByType[addonType.id]}" layout="grid" columns="2">
+                            <p:selectOneRadio id="addonRadio_#{addonType.id}" value="#{showProductBean.selectedAddonsByType[addonType.id]}" layout="grid" columns="4">
                                 <f:selectItems value="#{showProductBean.getAvailableAddonsForType(addonType.id)}" 
                                               var="addon" 
                                               itemLabel="#{addon.name} (+$#{addon.price})" 
                                               itemValue="#{addon.id}" />
-                                <p:ajax listener="#{showProductBean.selectAddonForType(addonType.id)}" update="@this" />
+                                <p:ajax listener="#{showProductBean.selectAddonForType(addonType.id)}" 
+                                        update=":confirmForm:unitPricePanel :confirmForm:totalPricePanel" />
                             </p:selectOneRadio>
                         </p:panelGrid>
                         <p:separator />
                     </div>
                 </ui:repeat>
             </p:panel>
+
+            <div class="mt-3">
+                <p:outputPanel id="unitPricePanel">
+                    <div style="margin-bottom: 10px; font-weight: bold;">
+                        <h:outputText value="Unit Price (with addons): " />
+                        <h:outputText value="#{showProductBean.unitPrice}">
+                            <f:convertNumber type="currency" currencySymbol="$"/>
+                        </h:outputText>
+                    </div>
+                </p:outputPanel>
+
+                <p:outputPanel id="totalPricePanel">
+                    <div style="margin-bottom: 10px; font-weight: bold; font-size: 1.2em; color: #2196F3;">
+                        <h:outputText value="Total Price: " />
+                        <h:outputText value="#{showProductBean.calculateTotalPrice()}">
+                            <f:convertNumber type="currency" currencySymbol="$"/>
+                        </h:outputText>
+                    </div>
+                </p:outputPanel>
+            </div>
 
             <div class="mt-3">
                 <p:commandButton value="Add to Cart" 
