--- a/src/main/webapp/admin/ingredientManagement.xhtml
+++ b/src/main/webapp/admin/ingredientManagement.xhtml
@@ -8,12 +8,14 @@
 </h:head>
 <h:body>
 
-    <p:menubar>
-        <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
-        <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
-        <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
-        <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
-    </p:menubar>
+    <h:form>
+        <p:menubar>
+            <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
+            <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
+            <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
+            <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
+        </p:menubar>
+    </h:form>
 
     <h:outputText value="Ingredients"
                   style="display:block; font-size: 24px; font-weight: bold; color: #333;
@@ -68,7 +70,6 @@
 
     <p:dialog header="Ingredient Details" widgetVar="ingredientDialog" modal="true" resizable="false"
               id="ingredientDialog" draggable="false" showEffect="fade" hideEffect="fade" closable="true" width="700" minHeight="200" dynamic="true">
-        <p:messages id="messages1" autoUpdate="true" showDetail="true" />
         <h:form id="dialogs">
             <p:messages id="messages" autoUpdate="true" showDetail="true" />
             <p:outputPanel id="ingredientDialogPanel" style="text-align:center;">
@@ -80,12 +81,11 @@
                     <p:outputLabel for="price" value="Price:" />
                     <p:inputText id="price" value="#{ingredientManagementBean.selectedIngredient.price}" required="true"/>
 
-                    <!--  <p:outputLabel for="type" value="Ingredient Type:" />
-                      <p:selectOneMenu id="type" value="#{ingredientManagementBean.selectedIngredient.type}" required="true">
-                          <f:selectItems value="#{ingredientManagementBean.ingredientTypes}" var="type"
-                                         itemValue="#{type}" itemLabel="#{type.name}" />
-                          <f:converter converterId="ingredientTypeConverter" />
-                    </p:selectOneMenu>-->
+                    <p:outputLabel for="type" value="Ingredient Type:" />
+                      <p:selectOneMenu id="type" value="#{ingredientManagementBean.ingredientTypeId}" required="true">
+                          <f:selectItems value="#{ingredientManagementBean.ingredientTypeDictionary.values()}" var="type"
+                                         itemValue="#{type.id}" itemLabel="#{type.name}" />
+                    </p:selectOneMenu>
 
                 </p:panelGrid>
 
@@ -93,9 +93,9 @@
 
                 <p:commandButton value="Save"
                                  process="@form"
-                                 update=":form:dt-ingredients"
+                                 update="form:dt-ingredients :dialogs:messages"
                                  action="#{ingredientManagementBean.saveIngredient}"
-                                  icon="pi pi-check" />
+                                 icon="pi pi-check" />
                 <p:commandButton value="Cancel" icon="pi pi-times" onclick="PF('ingredientDialog').hide()" type="button"/>
             </p:outputPanel>
         </h:form>
