added that you could add categories to products

--- a/src/main/webapp/admin/categoryManagement.xhtml
+++ b/src/main/webapp/admin/categoryManagement.xhtml
@@ -10,12 +10,14 @@
 <h:body>
 
 
-    <p:menubar>
-        <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
-        <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
-        <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
-        <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
-    </p:menubar>
+    <h:form>
+        <p:menubar>
+            <p:menuitem value="Products" outcome="productManagement.xhtml" icon="pi pi-box" />
+            <p:menuitem value="Categories" outcome="categoryManagement.xhtml" icon="pi pi-tags" />
+            <p:menuitem value="Ingredients" outcome="ingredientManagement.xhtml" icon="pi pi-apple" />
+            <p:menuitem value="Ingredient Types" outcome="ingTypeManagement.xhtml" icon="pi pi-tags" />
+        </p:menubar>
+    </h:form>
 
 
     <h:outputText value="Categories"
