Useless commit to check the push

--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -124,7 +124,7 @@
 
                 <p:outputPanel id="totalPricePanel">
                     <div style="margin-bottom: 10px; font-weight: bold; font-size: 1.2em; color: #2196F3;">
-                        <h:outputText value="Total Price: " />
+                        <h:outputText value="Total Price is: " />
                         <h:outputText value="#{showProductBean.calculateTotalPrice()}">
                             <f:convertNumber type="currency" currencySymbol="$"/>
                         </h:outputText>
